--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_native_splash: ^2.4.0
+  firebase_core: ^3.1.0
+  firebase_auth: ^5.1.0
+  cloud_firestore: ^5.0.1
+  permission_handler: ^11.3.1
+  loading_animation_widget: ^1.2.1
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
