--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ flutter:
     - lib/images/OrderlyLogo_doggie.png
     - lib/images/OrderlyLogo_doggie_alone2.png
     - lib/images/OrderlyLogo_doggie2.png
+    - lib/images/OrderlyLogoLogin.png
+    - lib/images/interfaceicons/google.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -87,6 +89,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: lib/fonts/Poppins-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
