--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   geolocator: ^12.0.0
   intl_phone_number_input: ^0.7.4
   shared_preferences: ^2.2.3
+  location: ^6.0.2
 
 dev_dependencies:
   flutter_test:
