--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   intl_phone_number_input: ^0.7.4
   shared_preferences: ^2.2.3
   location: ^6.0.2
+  dot_navigation_bar: ^1.0.2
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
