--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   webview_flutter: ^4.8.0
   another_flutter_splash_screen: ^1.2.1
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
