--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   webview_flutter: ^4.8.0
   another_flutter_splash_screen: ^1.2.1
   confetti: ^0.7.0
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
