--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   another_flutter_splash_screen: ^1.2.1
   confetti: ^0.7.0
   cached_network_image: ^3.3.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
