--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   confetti: ^0.7.0
   cached_network_image: ^3.3.1
   image_picker: ^1.1.2
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
