--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   cached_network_image: ^3.3.1
   image_picker: ^1.1.2
   flutter_spinkit: ^5.2.1
+  dart_openai: ^5.1.0
+  envied: ^0.5.4+1
+  chat_gpt_sdk: ^3.0.7
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +69,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  envied_generator: ^0.5.4+1
+  build_runner: ^2.4.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
