--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   envied: ^0.5.4+1
   chat_gpt_sdk: ^3.0.7
   uuid: ^4.4.2
+  animated_text_kit: ^4.2.2
+  firebase_storage: ^12.1.3
 
 dev_dependencies:
   flutter_test:
